Add body-1 html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 </head>
 <body>
     <header class="header">
-
+        <img class="header-logo" src="" alt="Header Logo"></img>
+       <ul class="links">
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+       </ul>
     </header>
     <div class="body-1">
-
+        <div class="left-body-1">
+            <div>Welcome to Crea met chique</div>
+            <div>This website is a collection of my favorite recipe's to cook. Happy cooking! 👩‍🍳</div>
+            <button>Sign up</button>
+        </div>
+        <img class="right-body-2" src="" alt="Placeholder image">
     </div>
     <div class="body-2">
 
