--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header class="header">
         <img class="header-logo" src="" alt="Header Logo"></img>
        <ul class="links">
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact</li>
+        <li class="header-link">Home</li>
+        <li class="header-link">About</li>
+        <li class="header-link">Contact</li>
        </ul>
     </header>
     <div class="body-1">
@@ -25,10 +25,18 @@
         <img class="right-body-2" src="" alt="Placeholder image">
     </div>
     <div class="body-2">
-
+        <div class="body-2-title">Some of my favorite dishes.</div>
+        <div class="dishes">
+            <div><img src="./img/salade.jpg" alt="Salade on the side with baked potatoes and Champignon">Salade on the side with baked potatoes and Champignon.</div>
+            <div><img src="./img/tomahawk.jpg" alt="Tomahawks with potatoes on the side and a delicious sauce.">Tomahawks with potatoes on the side and a delicious sauce.</div>
+            <div><img src="./img/paprika.jpg" alt="Loaded paprika with potatoes on the side and delicious sauce.">Loaded paprika with potatoes on the side and delicious sauce.</div>
+            <div><img src="./img/bara.jpg" alt="Oliebolle bara with a little sugar. Made from olibollemix.">Oliebolle bara with a little sugar. Made from olibollemix.</div>
+        </div>
     </div>
     <div class="body-3">
-
+        <div>Ik wens jullie allen gezellige, warme, lekkere, buikvullende feestdagen. Geniet van elk moment en vooral van elkaar.
+            Vrolijk kerstfeest 🌲❤️ liefs van mij 🥰</div>
+        <div>-Crea met chique</div>
     </div>
     <div class="body-4">
 
