--- a/index.html
+++ b/index.html
@@ -18,31 +18,38 @@
     </header>
     <div class="body-1">
         <div class="left-body-1">
-            <div>Welcome to Crea met chique</div>
-            <div>This website is a collection of my favorite recipe's to cook. Happy cooking! 👩‍🍳</div>
-            <button>Sign up</button>
+            <div class="title-body-1">Welcome to Crea met chique</div>
+            <div class="text-body-1">This website is a collection of my favorite recipe's to cook. Happy cooking! 👩‍🍳</div>
+            <button class="button-body-1">Sign up</button>
         </div>
         <img class="right-body-2" src="" alt="Placeholder image">
     </div>
     <div class="body-2">
         <div class="body-2-title">Some of my favorite dishes.</div>
         <div class="dishes">
-            <div><img src="./img/salade.jpg" alt="Salade on the side with baked potatoes and Champignon">Salade on the side with baked potatoes and Champignon.</div>
-            <div><img src="./img/tomahawk.jpg" alt="Tomahawks with potatoes on the side and a delicious sauce.">Tomahawks with potatoes on the side and a delicious sauce.</div>
-            <div><img src="./img/paprika.jpg" alt="Loaded paprika with potatoes on the side and delicious sauce.">Loaded paprika with potatoes on the side and delicious sauce.</div>
-            <div><img src="./img/bara.jpg" alt="Oliebolle bara with a little sugar. Made from olibollemix.">Oliebolle bara with a little sugar. Made from olibollemix.</div>
+            <div><img class="img-list" src="./img/salade.jpg" alt="Salade on the side with baked potatoes and Champignon">Salade on the side with baked potatoes and Champignon.</div>
+            <div><img class="img-list" src="./img/tomahawk.jpg" alt="Tomahawks with potatoes on the side and a delicious sauce.">Tomahawks with potatoes on the side and a delicious sauce.</div>
+            <div><img class="img-list" src="./img/paprika.jpg" alt="Loaded paprika with potatoes on the side and delicious sauce.">Loaded paprika with potatoes on the side and delicious sauce.</div>
+            <div><img class="img-list" src="./img/bara.jpg" alt="Oliebolle bara with a little sugar. Made from olibollemix.">Oliebolle bara with a little sugar. Made from olibollemix.</div>
         </div>
     </div>
     <div class="body-3">
-        <div>Ik wens jullie allen gezellige, warme, lekkere, buikvullende feestdagen. Geniet van elk moment en vooral van elkaar.
+        <div class="quote">Ik wens jullie allen gezellige, warme, lekkere, buikvullende feestdagen. Geniet van elk moment en vooral van elkaar.
             Vrolijk kerstfeest 🌲❤️ liefs van mij 🥰</div>
-        <div>-Crea met chique</div>
+        <div class="author">-Crea met chique</div>
     </div>
     <div class="body-4">
+        <div class="left-body-4">
+            <div class="title-body-4">Save your favorite recipes now!</div>
+            <div class="text-body-4">Sign up to make a personal list of all the recipes you want to make!</div>
+        </div>
 
+        <div class="right-body-4">
+            <button class="button-body-4">Sign up</button>
+        </div>
     </div>
     <div class="footer">
-        <div>Copyright © C0deBunny 🐇</div>
+        <div class="footer-text">Copyright © C0deBunny 🐇</div>
     </div>
 </body>
 </html>
