Add missing images

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/originals/a8/b4/0f/a8b40f5f12379bea4da7a57bc1caf5f4.png">
+    <link rel="icon" type="image/x-icon" href="">
     <title>Crea-met-chique</title>
 </head>
 <body>
     <header class="header">
-        <img class="header-logo" src="" alt="Header Logo"></img>
+        <img class="header-logo" src="https://i.pinimg.com/originals/a8/b4/0f/a8b40f5f12379bea4da7a57bc1caf5f4.png" alt="Header Logo"></img>
        <ul class="links">
         <li class="header-link">Home</li>
         <li class="header-link">About</li>
@@ -22,7 +22,7 @@
             <div class="text-body-1">This website is a collection of my favorite recipe's to cook. Happy cooking! 👩‍🍳</div>
             <button class="button-body-1">Sign up</button>
         </div>
-        <img class="right-body-2" src="" alt="Placeholder image">
+        <img class="right-body-2" src="./img/chique.jpg" alt="Placeholder image">
     </div>
     <div class="body-2">
         <div class="body-2-title">Some of my favorite dishes.</div>
