--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
     <header class="header">
         <img class="header-logo" src="https://i.pinimg.com/originals/a8/b4/0f/a8b40f5f12379bea4da7a57bc1caf5f4.png" alt="Header Logo"></img>
        <ul class="links">
-        <li class="header-link">Home</li>
-        <li class="header-link">About</li>
-        <li class="header-link">Contact</li>
+        <li class="header-link"><a href="./index.html">Home</a></li>
+        <li class="header-link"><a href="./index.html">About</a></li>
+        <li class="header-link"><a href="https://www.instagram.com/crea_met_chique/" rel="noopener noreferrer" target="_blank">Contact</a></li>
        </ul>
     </header>
     <div class="body-1">
         <div class="left-body-1">
             <div class="title-body-1">Welcome to Crea met chique</div>
-            <div class="text-body-1">This website is a collection of my favorite recipe's to cook. Happy cooking! 👩‍🍳</div>
-            <button class="button-body-1">Sign up</button>
+            <div class="text-body-1">This website is a collection of my favorite recipes to make. Happy cooking! 👩‍🍳</div>
+            <button class="button-body-1">Follow me</button>
         </div>
         <img class="right-body-2" src="./img/chique.jpg" alt="Placeholder image">
     </div>
     <div class="body-2">
         <div class="body-2-title">Some of my favorite dishes.</div>
         <div class="dishes">
-            <div><img class="img-list" src="./img/salade.jpg" alt="Salade on the side with baked potatoes and Champignon">Salade on the side with baked potatoes and Champignon.</div>
-            <div><img class="img-list" src="./img/tomahawk.jpg" alt="Tomahawks with potatoes on the side and a delicious sauce.">Tomahawks with potatoes on the side and a delicious sauce.</div>
-            <div><img class="img-list" src="./img/paprika.jpg" alt="Loaded paprika with potatoes on the side and delicious sauce.">Loaded paprika with potatoes on the side and delicious sauce.</div>
-            <div><img class="img-list" src="./img/bara.jpg" alt="Oliebolle bara with a little sugar. Made from olibollemix.">Oliebolle bara with a little sugar. Made from olibollemix.</div>
+            <div class="image-text"><img class="img-list" src="./img/salade.jpg" alt="Salade on the side with baked potatoes and Champignon">Salade on the side with baked potatoes and Champignon.</div>
+            <div class="image-text"><img class="img-list" src="./img/tomahawk.jpg" alt="Tomahawks with potatoes on the side and a delicious sauce.">Tomahawks with potatoes on the side and a delicious sauce.</div>
+            <div class="image-text"><img class="img-list" src="./img/paprika.jpg" alt="Loaded paprika with potatoes on the side and delicious sauce.">Loaded paprika with potatoes on the side and delicious sauce.</div>
+            <div class="image-text"><img class="img-list" src="./img/bara.jpg" alt="Oliebolle bara with a little sugar. Made from olibollemix.">Oliebolle bara with a little sugar. Made from olibollemix.</div>
         </div>
     </div>
     <div class="body-3">
@@ -48,7 +48,7 @@
             <button class="button-body-4">Sign up</button>
         </div>
     </div>
-    <div class="footer">
+    <footer class="footer">
         <div class="footer-text">Copyright © C0deBunny 🐇</div>
     </div>
 </body>
