Add Styles body-2,3,4 and footer. finish project

--- a/index.html
+++ b/index.html
@@ -22,30 +22,31 @@
             <div class="text-body-1">This website is a collection of my favorite recipes to make. Happy cooking! 👩‍🍳</div>
             <button class="button-body-1">Follow me</button>
         </div>
-        <img class="right-body-2" src="./img/chique.jpg" alt="Placeholder image">
+        <img class="right-body-1" src="./img/chique.jpg" alt="Placeholder image">
     </div>
     <div class="body-2">
         <div class="body-2-title">Some of my favorite dishes.</div>
-        <div class="dishes">
-            <div class="image-text"><img class="img-list" src="./img/salade.jpg" alt="Salade on the side with baked potatoes and Champignon">Salade on the side with baked potatoes and Champignon.</div>
-            <div class="image-text"><img class="img-list" src="./img/tomahawk.jpg" alt="Tomahawks with potatoes on the side and a delicious sauce.">Tomahawks with potatoes on the side and a delicious sauce.</div>
-            <div class="image-text"><img class="img-list" src="./img/paprika.jpg" alt="Loaded paprika with potatoes on the side and delicious sauce.">Loaded paprika with potatoes on the side and delicious sauce.</div>
-            <div class="image-text"><img class="img-list" src="./img/bara.jpg" alt="Oliebolle bara with a little sugar. Made from olibollemix.">Oliebolle bara with a little sugar. Made from olibollemix.</div>
+        <div class="recipes-container">
+            <div class="image-container"><img class="img" src="./img/salade.jpg" alt="Salade on the side with baked potatoes and Champignon"><p class="img-text">Salad on the side with baked potatoes and Champignon.</p></div>
+            <div class="image-container"><img class="img" src="./img/tomahawk.jpg" alt="Tomahawks with potatoes on the side and a delicious sauce."><p class="img-text">Tomahawks with potatoes on the side and a delicious sauce.</p></div>
+            <div class="image-container"><img class="img" src="./img/paprika.jpg" alt="Loaded paprika with potatoes on the side and delicious sauce."><p class="img-text">Loaded paprika with potatoes on the side and delicious sauce.</p></div>
+            <div class="image-container"><img class="img" src="./img/bara.jpg" alt="Oliebolle bara with a little sugar. Made from olibollemix."><p class="img-text">Oliebolle bara with a little sugar. Made from oliebollemix.</p></div>
         </div>
     </div>
     <div class="body-3">
-        <div class="quote">Ik wens jullie allen gezellige, warme, lekkere, buikvullende feestdagen. Geniet van elk moment en vooral van elkaar.
-            Vrolijk kerstfeest 🌲❤️ liefs van mij 🥰</div>
-        <div class="author">-Crea met chique</div>
+        <p class="quote">Ik wens jullie allen gezellige, warme, lekkere, buikvullende feestdagen. Geniet van elk moment en vooral van elkaar.
+            Vrolijk kerstfeest 🌲❤️ liefs van mij 🥰</p>
+        <p class="author">-Crea met chique</p>
     </div>
     <div class="body-4">
-        <div class="left-body-4">
-            <div class="title-body-4">Save your favorite recipes now!</div>
-            <div class="text-body-4">Sign up to make a personal list of all the recipes you want to make!</div>
-        </div>
-
-        <div class="right-body-4">
-            <button class="button-body-4">Sign up</button>
+        <div class="body-4-container">
+            <div class="left-body-4">
+                <div class="title-body-4">Save your favorite recipes now!</div>
+                <div class="text-body-4">Sign up to make a personal list of all the recipes you want to make!</div>
+            </div>
+            <div class="right-body-4">
+                <button class="button-body-4">Sign up</button>
+            </div>
         </div>
     </div>
     <footer class="footer">
