Fix page icon and expand README

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" type="image/x-icon" href="">
+    <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/originals/a8/b4/0f/a8b40f5f12379bea4da7a57bc1caf5f4.png">
     <title>Crea-met-chique</title>
 </head>
 <body>
